--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Firebase_services_portfolio_KMP</string>
+    <string name="app_name">Firebase Portfolio KMP</string>
 </resources>
